--- a/src/Applications/BusInfo.Web/Properties/launchSettings.json
+++ b/src/Applications/BusInfo.Web/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56011",
+      "applicationUrl": "http://0.0.0.0:56011",
       "sslPort": 44324
     }
   },
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7198;http://localhost:5006",
+      "applicationUrl": "https://0.0.0.0:7198;http://localhost:5006",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
